Fixing user interface layout

--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -21,7 +21,9 @@
         padding-top: 110px;
         padding-bottom: 100px;
     }
-
+    .responsive-pull-right {
+        float: right!important;
+    }
     .selected-buttons {
         float: right!important;
     }
@@ -188,7 +190,7 @@ div.screen-footer {
 .main-toolbar {
     overflow: visible;
     margin: 0px;
-    padding: 0px 20px;
+    padding: 0px;
     vertical-align: middle;
     zoom: 1;
 }
