--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -1,25 +1,26 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-8">
-        {{#if task}}
-            {{#if task.active}}
-                 <button class="btn btn-default navbar-btn" id="suspend-dialog-button" data-target="#suspend-dialog" data-backdrop="false" data-toggle="modal" title="Suspend process" type="button"><i class="icon-pause icon-white"></i></button>
-                 <button class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
-            {{else}}
-                 <button class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="icon-play icon-white"></i></button>
+        <div class="col-lg-4 col-sm-4">
+            {{#if task}}
+                {{#if task.active}}
+                     <button class="btn btn-default navbar-btn" id="suspend-dialog-button" data-target="#suspend-dialog" data-backdrop="false" data-toggle="modal" title="Suspend process" type="button"><i class="icon-pause icon-white"></i></button>
+                     <button class="btn btn-danger navbar-btn incomplete-selected-result-btn" id="delete-dialog-button" data-target="#delete-dialog" data-backdrop="false" data-toggle="modal" title="Delete process" type="button"><i class="icon-trash icon-white"></i></button>
+                {{else}}
+                     <button class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="icon-play icon-white"></i></button>
+                {{/if}}
             {{/if}}
-        {{/if}}
         </div>
-        <div class="col-lg-4">
-            {{#if task.active}}
-                <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
-                <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
-            {{/if}}
-
-            <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></a>
+        <div class="col-lg-4 col-sm-4 col-lg-offset-4 col-sm-offset-4">
+            <div class="responsive-pull-right">
+                {{#if task.active}}
+                    <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
+                    <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
+                {{/if}}
+                <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></a>
+            </div>
         </div>
     </div>
-</div>                                                                                                                    s
+</div>
 
 <div id="activate-dialog" class="modal fade">
     <div class="modal-dialog">
@@ -44,7 +45,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-body">
-                <textarea class="input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
+                <textarea class="form-control input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
                 <button class="btn" id="file-button"><i class="icon-file"></i></button>
                 <input type="file" name="attachment" class="attach-file hide"/>
             </div>
