--- a/web/src/main/webapp/static/js/templates/form/section.hbs
+++ b/web/src/main/webapp/static/js/templates/form/section.hbs
@@ -1,5 +1,5 @@
 <div class="section-header">
-    <h3>{{title}}</h3>
+    <legend>{{title}}</legend>
     {{#if description}}
     <p class="lead">{{description}}</p>
     {{/if}}
