--- a/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form-toolbar.hbs
@@ -1,4 +1,9 @@
-<div class="container">
+<div class="container visible-sm">
+    <div class="row col-lg-2 col-lg-offset-4 col-sm-2 col-sm-offset-4">
+        <button class="btn btn-default navbar-btn" type="button" style="margin-bottom: 8px" data-toggle="collapse" data-target=".pw-navbar-collapse"><i class="icon-reorder"></i></button>
+    </div>
+</div>
+<div class="container nav-collapse collapse navbar-responsive-collapse pw-navbar-collapse">
     <div class="row">
         <div class="col-lg-4 col-sm-4">
             {{#if task}}
@@ -8,12 +13,20 @@
                 {{else}}
                      <button class="btn btn-default navbar-btn" id="activate-dialog-button" data-target="#activate-dialog" data-backdrop="false" data-toggle="modal" title="Activate process" type="button"><i class="icon-play icon-white"></i></button>
                 {{/if}}
+            {{else}}
+                &nbsp;
             {{/if}}
         </div>
-        <div class="col-lg-4 col-sm-4 col-lg-offset-4 col-sm-offset-4">
+        <div class="col-lg-8 col-sm-8">
             <div class="responsive-pull-right">
                 {{#if task.active}}
-                    <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment"></i></a>
+                    {{#if task.assignee}}
+                        <p class="navbar-text text-primary">Assigned to {{task.assignee.displayName}}</p>
+                    {{/if}}
+                    <button class="btn btn-default navbar-btn incomplete-selected-result-btn" id="assign-dialog-button" data-target="#assign-dialog" data-backdrop="false" data-toggle="modal" title="Assign task" type="button"><i class="icon-user icon-white"></i></button>
+                    <a class="btn btn-default navbar-btn" id="comment-button" data-target="#comment-dialog" data-backdrop="false" data-toggle="modal" title="Add comment" type="button"><i class="icon-comment-alt"></i></a>
+                    <button class="btn btn-default navbar-btn" id="file-button" title="Attach file"><i class="icon-paper-clip"></i></button>
+                    <input type="file" name="attachment" class="attach-file hide"/>
                     <button class="btn btn-default navbar-btn" id="attachments-button" title="View comments and attachments"><i class="icon-folder-open"></i>&nbsp;<span id="attachment-count">{{attachmentCount}}</span></button>
                 {{/if}}
                 <a class="btn btn-default navbar-btn" href="{{root}}.html" rel="external" id="back-button" title="Return to task list"><i class="icon-arrow-left"></i></a>
@@ -41,16 +54,52 @@
     </div>
 </div>
 
+<div id="assign-dialog" class="modal fade">
+    <div class="modal-dialog">
+        <form>
+            <fieldset>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                        <h4 class="modal-title">Assign Task</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="assignee">Assignee</label>
+                            <div>
+                                <input class="form-control" type="text" id="assignee" name="assignee" autocomplete="off"/>
+                            </div>
+                        </div>
+                        <input type="hidden" id="assigneeId"/>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                        <button type="button" class="btn btn-primary" id="assign-button" disabled>Assign</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
+</div>
+
 <div id="comment-dialog" class="modal fade">
     <div class="modal-dialog">
         <div class="modal-content">
-            <div class="modal-body">
-                <textarea class="form-control input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
-                <button class="btn" id="file-button"><i class="icon-file"></i></button>
-                <input type="file" name="attachment" class="attach-file hide"/>
+            <div class="modal-body container">
+                <div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <textarea class="form-control input-block-level" placeholder="Enter a comment" name="comment" id="attach-comment" rows="4"></textarea>
+                    </div>
+                </div>
+                <!--<div class="row">
+                    <div class="col-lg-12 col-sm-12">
+                        <button class="btn btn-default navbar-btn" id="file-button"><i class="icon-file"></i> Add file</button>
+                        <input type="file" name="attachment" class="attach-file hide"/>
+                    </div>
+                </div>-->
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal" aria-hidden="true">Cancel</button>
                 <button type="button" id="attach-button" class="btn btn-primary">Attach</button>
             </div>
         </div>
