--- a/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
@@ -3,14 +3,15 @@
 {{/if}}
 {{#if options}}
     {{#each options}}
-        <label class="checkbox">
-            <input class="form-control"
-                   type="checkbox"
-                   name="{{name}}"
-                   value="{{value}}"
-                    {{#if ../required}}class="required"{{/if}}/> {{label}}
-                    {{#if selected}}checked{{/if}}
-        </label>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"
+                       name="{{name}}"
+                       value="{{value}}"
+                        {{#if ../required}}class="required"{{/if}}/> {{label}}
+                        {{#if selected}}checked{{/if}}
+            </label>
+        </div>
     {{/each}}
 {{/if}}
 {{#if messages}}
