--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -23,7 +23,6 @@
     }
     .responsive-pull-right {
         float: right!important;
-        margin-top: -3px;
     }
     .selected-buttons {
         float: right!important;
@@ -192,6 +191,7 @@ div.screen-footer {
 .main-toolbar {
     overflow: visible;
     margin: 0px;
+    min-height:48px;
     padding: 0px;
     vertical-align: middle;
     zoom: 1;
