--- a/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
+++ b/web/src/main/webapp/static/js/templates/search/search-results-container.hbs
@@ -4,9 +4,9 @@
     <tr>
         <th><i class="icon-check"></i></th>
         <th>Label</th>
-        <th class="hide-narrow">Status</th>
-        <th class="hide-narrow">Task</th>
-        <th class="hide-narrow">Assignee</th>
+        <th class="hidden-xs">Status</th>
+        <th class="hidden-sm">Task</th>
+        <th class="hidden-sm">Assignee</th>
         <th>Date</th>
     </tr>
     </thead>
