Fixing various bugs, including with max form value suubmission size

--- a/web/src/main/webapp/static/js/templates/form/button-link.hbs
+++ b/web/src/main/webapp/static/js/templates/form/button-link.hbs
@@ -1,1 +1,1 @@
-<a class="btn btn-default btn-large" role="button" href="{{link}}" alt="{{alt}}">{{label}}</a>
+<a class="btn btn-default btn-large action-button" role="button" href="{{link}}" alt="{{alt}}">{{label}}</a>
