--- a/web/src/main/webapp/static/js/templates/form/section.hbs
+++ b/web/src/main/webapp/static/js/templates/form/section.hbs
@@ -1,5 +1,7 @@
 <div class="section-header">
+    {{#if title}}
     <legend>{{title}}</legend>
+    {{/if}}
     {{#if description}}
     <p class="lead">{{description}}</p>
     {{/if}}
