--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -56,7 +56,7 @@ h3 {
     font-weight: 200;
 }*/
 
-input, textarea, .uneditable-input {
+input, .uneditable-input {
     width: auto;
 }
 
@@ -158,6 +158,22 @@ div.screen-footer {
     clear: both;
     font-weight: normal;
     white-space: nowrap;
+}
+
+input[type="text"].form-control {
+    width: auto;
+}
+
+.form-group.input-append label {
+    display: block;
+}
+
+.form-group.input-append .form-control {
+    display: inline-block;
+}
+
+.form-control.input-append div.btn-group {
+    display: inline-block;
 }
 
 .hidden-checkbox {
