Fixes to basic functionality of demonstration version

--- a/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
+++ b/web/src/main/webapp/static/js/templates/form/field-checkbox.hbs
@@ -8,7 +8,7 @@
                 <input type="checkbox"
                        name="{{name}}"
                        value="{{value}}"
-                        {{#if ../required}}class="required"{{/if}}/> {{label}}
+                        {{#if ../required}}class="required"{{/if}} {{#unless editable}}disabled{{/unless}}/> {{label}}
                         {{#if selected}}checked{{/if}}
             </label>
         </div>
