Refactoring to use command pattern and clean up service classes

--- a/web/src/main/webapp/static/js/templates/form/form.hbs
+++ b/web/src/main/webapp/static/js/templates/form/form.hbs
@@ -1,5 +1,5 @@
-{{#if task}}
-    {{#if readonly}}
+{{#if screen.readonly}}
+    {{#if task}}
         {{#if task.active}}
         <div class="alert">This form cannot be modified - it is assigned to {{task.assignee.displayName}}</div>
         {{else}}
