Tiny fix to layout in css

--- a/web/src/main/webapp/static/css/layout.css
+++ b/web/src/main/webapp/static/css/layout.css
@@ -195,6 +195,7 @@ input[type="text"].form-control {
 .main-footer {
     background-color: whitesmoke;
     border-top: 1px solid #CCCCCC;
+    z-index: 0;
 }
 
 .main-navbar {
