Switching to built js

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -36,5 +36,7 @@
 
     <script type="text/javascript" id="piecework-context-script">
     </script>
-    <script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>
+    <!--<script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>-->
+
+    <script data-main="../static/js/main-built.js" src="../static/js/vendor/require.js"></script>
 </body>
