Including user entered data as instance variables in engine when task completed

--- a/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
+++ b/web/src/main/resources/META-INF/piecework/templates/Layout.template.html
@@ -37,5 +37,5 @@
     </script>
     <!--<script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>-->
 
-    <script data-main="../static/js/main-built.js" src="../static/js/vendor/require.js"></script>
+    <script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>
 </body>
