--- a/web/src/main/webapp/static/js/templates/form/button.hbs
+++ b/web/src/main/webapp/static/js/templates/form/button.hbs
@@ -1,1 +1,1 @@
-<button class="btn btn-default btn-large action-button" data-wizard="{{wizard}}" role="button" name="{{name}}" type="{{type}}" value="{{value}}" alt="{{alt}}">{{label}}</button>
+<button class="btn btn-default btn-large action-button" data-wizard="{{wizard}}" data-action="{{action}}" role="button" name="{{name}}" type="{{type}}" value="{{value}}" alt="{{alt}}">{{label}}</button>
